--- a/view/index/IndexCSS.css
+++ b/view/index/IndexCSS.css
@@ -29,7 +29,7 @@
 
 .left>.col-sm-8{
     background: rgba(200,200,200,0.85);
-    padding: 3%;
+    padding: 2%;
     height: 100%;
     max-height: 100%;
 }
@@ -54,7 +54,7 @@
     background-blend-mode: normal;
     /*margin-top: 10px;*/
     /*margin-bottom: 10px;*/
-    height: 180px;
+    height: 220px;
     /*filter: blur(10px)*/
 }
 
@@ -127,7 +127,7 @@ a:link{
     color: white;
     background-color: rgba(20,20,20,0.4);
     height: 100%;
-    padding: 1%;
+    padding: 0;
 }
 
 .right>.col-sm-4>h2{
